<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/teamA"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/teamA_score_text_view"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:text="@string/zero"
                android:textSize="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:id="@+id/score_button_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:onClick="goalTeamA"/>

            <TextView
                android:id="@+id/teamA_fouls_text_view"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:text="@string/zero"
                android:textSize="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:id="@+id/fouls_button_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foul"
                android:onClick="foulTeamA"/>

            <Button
                android:id="@+id/reset_button_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textSize="10sp"
                android:text="@string/resetA"
                android:onClick="resetTeamA"/>

        </LinearLayout>


        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="140dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:src="@drawable/foot2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/teamB"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/teamB_score_text_view"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:text="@string/zero"
                android:textSize="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/score_button_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:onClick="goalTeamB"/>

            <TextView
                android:id="@+id/teamB_fouls_text_view"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:text="@string/zero"
                android:textSize="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/fouls_button_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foul"
                android:onClick="foulTeamB"/>


            <Button
                android:id="@+id/reset_button_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:textSize="10sp"
                android:text="@string/resetB"
                android:onClick="resetTeamB"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="45dp"
        android:text="@string/reset"
        android:onClick="resetBothTeams"/>

</LinearLayout>
